--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,176 +6,220 @@
 
     <data>
 
+        <variable
+            name="titulo"
+            type="String" />
+
+        <variable
+            name="sinopse"
+            type="String" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#808080"
-        tools:context=".MainActivity">
+        tools:context=".view.MainActivity">
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="9dp"
-            android:layout_marginEnd="16dp"
-            android:text="Alexandre Rodrigues, Leandro Firmino da Hora, Jorge"
-            android:textColor="@color/black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textView4"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteY="428dp" />
-
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Fernando Meirelles, Kátia Lund"
-            android:textColor="@color/black"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="76dp"
-            tools:layout_editor_absoluteY="394dp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"></LinearLayout>
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="407dp"
-            android:layout_height="266dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="4dp"
-            app:layout_constraintBottom_toTopOf="@+id/textView10"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
-            app:srcCompat="@drawable/cidadededeus"
-            tools:ignore="MissingConstraints" />
-
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Films"
-            android:textColor="@color/black"
-            android:textSize="30dp"
-            android:textStyle="bold"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="144dp" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="348dp"
-            android:text="Sinopse: "
-            android:textColor="@color/black"
-            android:textStyle="bold"
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/poster"
+            android:layout_width="434dp"
+            android:layout_height="350dp"
+            android:layout_alignParentBottom="true"
+            android:foreground="@drawable/imggradient"
+            android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/luca"
             tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteY="496dp" />
+            tools:layout_editor_absoluteY="4dp" />
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="394dp"
-            android:layout_height="118dp"
-            android:text="Buscapé (Alexandre Rodrigues) é um jovem pobre, negro e muito sensível, que cresce em um universo de muita violência. Buscapé vive na Cidade de Deus, favela carioca conhecida por ser um dos locais mais violentos da cidade. Amedrontado com a possibilidade de se tornar um bandido, Buscapé acaba sendo salvo de seu destino por causa de seu talento como fotógrafo, o qual permite que siga carreira na profissão"
-            android:textColor="@color/black"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="5dp"
-            tools:layout_editor_absoluteY="538dp" />
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Elenco:"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="5dp"
-            tools:layout_editor_absoluteY="428dp" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="15dp"
-            android:text="Direção:"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/textView6"
-            app:layout_constraintHorizontal_bias="1.0"
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/buttonreturn"
+            android:layout_width="46dp"
+            android:layout_height="54dp"
+            android:layout_marginTop="4dp"
+            android:padding="10dp"
             app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteY="394dp" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/setabranca" />
 
-        <TextView
-            android:id="@+id/textView8"
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/titlemoviedescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="6dp"
-            android:text="Gênero:"
-            android:textColor="@color/black"
+            android:layout_marginTop="100dp"
+            android:text="@string/movies_item_title"
+            android:textColor="@color/title1"
+            android:textSize="30sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/textView9"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteY="464dp" />
+            app:layout_constraintEnd_toEndOf="@id/poster"
+            app:layout_constraintHorizontal_bias="0.056"
+            app:layout_constraintStart_toStartOf="@id/poster"
+            app:layout_constraintTop_toBottomOf="@id/buttonreturn" />
 
-        <TextView
-            android:id="@+id/textView9"
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/titlesinopse"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="251dp"
-            android:text="Drama, Policial"
-            android:textColor="@color/black"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="304dp"
+            android:text="@string/string_titlemain"
+            android:textColor="@color/titletext"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@id/poster"
+            app:layout_constraintHorizontal_bias="0.094"
+            app:layout_constraintStart_toStartOf="@id/poster"
+            app:layout_constraintTop_toBottomOf="@id/buttonreturn" />
+
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/movieDuration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="164dp"
+            android:layout_marginEnd="280dp"
+            android:text="1h 36m"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="@id/poster"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@id/titlesinopse"
+            app:layout_constraintTop_toBottomOf="@id/buttonreturn" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/data"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="120dp"
+            android:layout_marginTop="164dp"
+            android:layout_marginEnd="280dp"
+            android:text="18/06/2021"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="@id/poster"
+            app:layout_constraintHorizontal_bias="0.62"
+            app:layout_constraintStart_toStartOf="@id/titlesinopse"
+            app:layout_constraintTop_toBottomOf="@id/buttonreturn" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/genero"
+            android:layout_width="200dp"
+            android:layout_height="45dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="56dp"
+            android:background="@drawable/buttons"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:text="@string/genermain"
+            android:textColor="@color/generdescription"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textView8"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteY="464dp" />
-
-        <TextView
-            android:id="@+id/textView10"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cidade de Deus"
-            android:textColor="@color/black"
-            android:textSize="25dp"
-            android:textStyle="bold"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="151dp"
-            tools:layout_editor_absoluteY="347dp" />
-
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="23dp"
-            android:layout_marginBottom="13dp"
-            android:text="Titulo"
-            android:textColor="@color/black"
-            android:textSize="25dp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/textView6"
-            app:layout_constraintEnd_toStartOf="@+id/textView10"
+            app:layout_constraintHorizontal_bias="0.102"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"
-            app:layout_constraintVertical_bias="1.0"
+            app:layout_constraintTop_toBottomOf="@id/titlemoviedescription" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/faixaetaria"
+            android:layout_width="55dp"
+            android:layout_height="45dp"
+            android:layout_marginTop="56dp"
+            android:background="@drawable/buttons"
+            android:padding="0dp"
+            android:text="@string/string_etariemain"
+            android:textColor="@color/generdescription"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.688"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/titlemoviedescription" />
+
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/textsinopse"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="48dp"
+            android:justificationMode="none"
+            android:paddingLeft="24dp"
+            android:paddingRight="16dp"
+            android:text="@string/activity_main_textdescription"
+            android:textColor="@color/text"
+            android:textSize="17sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/poster"
+            tools:targetApi="o" />
+
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/capa"
+            android:layout_width="114dp"
+            android:layout_height="161dp"
+            android:layout_marginTop="16dp"
+            android:scaleType="fitXY"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.111"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view"
+            app:layout_constraintVertical_bias="0.0"
+            app:srcCompat="@drawable/luca"
             tools:ignore="MissingConstraints" />
 
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="168dp"
+            android:background="#CCCC"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textsinopse"
+            app:layout_constraintVertical_bias="0.0"
+            tools:layout_editor_absoluteX="0dp" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/titlecompany"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="136dp"
+            android:layout_marginTop="4dp"
+            android:paddingRight="30dp"
+            android:text="Description"
+            android:textColor="@color/titletext"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/capa"
+            app:layout_constraintTop_toBottomOf="@id/view"
+            app:layout_constraintVertical_bias="0.073" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/textcompany"
+            android:layout_width="215dp"
+            android:layout_height="44dp"
+            android:layout_marginTop="5dp"
+            android:justificationMode="none"
+            android:paddingLeft="2dp"
+            android:paddingRight="16dp"
+            android:text="Description film"
+            android:textColor="@color/text"
+            android:textSize="17sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.862"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/titlecompany"
+            app:layout_constraintVertical_bias="0.0"
+            tools:targetApi="o" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 </layout>
