--- a/app/src/main/res/layout/movies_list.xml
+++ b/app/src/main/res/layout/movies_list.xml
@@ -3,22 +3,58 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data></data>
-
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#9d9dff"
-        tools:context=".MoviesListActivity">
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/moviesRV"
+        android:orientation="vertical"
+        tools:context=".MoviesList">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:padding="5dp"
+            android:text="@string/activity_movie_subtitle"
+            android:textStyle="bold"
+            android:textColor="#2F3435"
+            android:textSize="25sp"
+            android:layout_marginStart="20dp"
+
+            />
+
+
+        <EditText
+            android:id="@+id/editView"
+            android:layout_width="381dp"
+            android:layout_marginStart="15dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/list_de_films"
+            android:textColor="#EAEAEA"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="15dp"
+            android:autofillHints="@string/app_name"
+            android:inputType="text"
+            android:textSize="12sp"
+            android:background="@drawable/input"/>
+
+
+
+
+        <View
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="3dp"
+            android:background="#EAEAEA" />
+
+        <androidx.recyclerview.widget.RecyclerView
+
+            android:id="@+id/moviesList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:itemCount="10"
-            tools:listitem="@layout/activity_main"/>
+            tools:listitem="@layout/movies_item" />
+    </LinearLayout>
 
-
-    </FrameLayout>
 </layout>
